# AOIetl

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: make_test_sentinel_landsat_tiles.py
src/aoietl/: build_paths.py  copy_output_to_blob.py  copy_to_fileshare.py  data_types  data_types.py  process.py  process_on_blobs.py  utils.py  validation.py
tests/: conftest.py  test_build_paths.py  test_process.py  test_utils.py  test_validation.py
tests/data/: Ocean Ledger Azure Blob Outline.pdf:Zone.Identifier  S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813.tif  config.yaml  config_fsspec.yaml  erosion_config.yaml
tests/data/aoi/: aoi_test.gpkg
tests/data/landsat/: LC08_L2SP_120034_20250422_02_T1_tile01.tif  LC08_L2SP_120034_20250422_02_T1_tile10.tif  LC08_L2SP_120034_20250422_02_T1_tile13.tif  LC08_L2SP_120034_20250422_02_T1_tile20.tif  LC08_L2SP_120034_20250423_02_T1_tile00.tif  LC08_L2SP_120034_20250423_02_T1_tile02.tif  LC08_L2SP_120034_20250423_02_T1_tile03.tif  LC08_L2SP_120034_20250423_02_T1_tile11.tif  LC08_L2SP_120034_20250423_02_T1_tile12.tif  LC08_L2SP_120034_20250423_02_T1_tile24.tif  LC08_L2SP_120034_20250423_02_T1_tile34.tif  LC08_L2SP_120034_20250423_02_T1_tile40.tif
tests/data/sentinel/: S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813_tile14.tif  S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813_tile21.tif  S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813_tile22.tif  S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813_tile23.tif  S2A_MSIL2A_20250401T015631_R117_T51LWC_20250401T043813_tile30.tif  (+8 more)
(+73 files in other folders)
